# advent-of-code

./: README.md
2020/: Cargo.toml  README.md
2020/src/: lib.rs  prelude.rs
2021/: Cargo.toml  README.md
2021/src/: lib.rs  prelude.rs
2022/: Cargo.toml  README.md
2022/src/: lib.rs
2023/: Cargo.toml  README.md
2023/input/: day_18.txt
2023/src/: lib.rs
2024/: .gitignore  Cargo.toml  README.md  download.sh
2024/src/: array.rs  char_grid.rs  ext.rs  lib.rs  mat.rs  mat_ops.rs  parsing.rs
